assets/sass/layout/_header.scss
///
/// Stellar by HTML5 UP
/// html5up.net | @ajlkn
/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
///

/* Header */
#header {
  //@include padding(5em, 5em, (0, 0, -2em, 0));
  @include padding(5em, 0, (0, 0, -2em, 0));
  text-align: center;
  //overflow: hidden;
  display: flex;
  flex-direction: column;
  position: relative;

  h1 {
    font-weight: bolder;
    text-shadow: 2px 2px 5px black;
    margin: 0 0 (_size(element-margin) * 0.125) 0;
  }

  p {
    font-size: 1.25em;
    font-weight: bolder;
    text-shadow: 2px 2px 3px black;
    letter-spacing: _font(letter-spacing);

    &.flex-1 {
      flex: 1 1 auto;
    }
  }

  #portrait {
    position: relative;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    pointer-events: none;
    @include vendor('user-select', 'none');

    img {
      width: auto;
      display: block;
      max-height: 450px; // TODO: Check later with updated portrait image!
      max-width: 100%;
      margin-left: 50%;
      @include vendor('transform', 'translateX(-50%)');
    }

    // Overlay to prevent any clicking/downloading the img
    &:after {
      content: '';
      display: block;
      position: absolute;
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
    }

    @media screen and (orientation:landscape) and (max-width:800px) {
      display: none;
    }
    @media screen and (min-width:nth(map-get($breakpoints, 'small'), 1)) and (max-height:768px) {
      display: none;
    }
  }

  &.alt {
    @include padding(5em, 0, (1em, 0, 0, 0));
    padding-bottom: 0 !important;
    min-height: calc(100% - 4.25rem);
    @include breakpoint('<=large') {
      min-height: calc(100% - 5rem);
    }
    @include breakpoint('<=xsmall') {
      min-height: calc(100% - 4.25rem);
    }
    // Prevent large open area on phone
    @media screen and (max-aspect-ratio: 1/2) { // Or 8/16
      min-height: calc(100vw * 2 - 4.25rem);
    }
    @media screen and (orientation: portrait) and (min-height: 1025px) and (max-width: nth(map-get($breakpoints, 'small'), 2)) {
      min-height: calc(1025px - 4.25rem);
    }
    // Tablet overrides to prevent large open area
    @media screen and (orientation: portrait) and (min-height: 1025px) and (min-width: nth(map-get($breakpoints, 'medium'), 1)) and (max-width: nth(map-get($breakpoints, 'large'), 2)) {
      min-height: calc(1025px - 5rem);
    }

    h1 {
      font-size: 3.25em;
    }

    // IE10+11 Fix
    @include browser-hack('ie10+') {
      display: table;
      table-layout: fixed;
      width: 100%;
      > * {
        display: table-row;
      }
      #portrait {
        display: table-row;
        height: 100%;

        > div {
          display: table-cell;
          vertical-align: bottom;
        }
      }
    }
  }

  @include breakpoint('<=large') {
    @include padding(4em, 4em, (0, 0, -2em, 0));

    &.alt {
      //@include padding(5em, 4em, (1em, 0, 0, 0));
      @include padding(5em, 0, (1em, 0, 0, 0));
      //font-size: 14pt;
    }
  }

  @include breakpoint('<=medium') {
    @include padding(4em, 3em, (0, 0, -2em, 0));

    &.alt {
      //@include padding(4em, 3em, (1em, 0, 0, 0));
      @include padding(5em, 0, (1em, 0, 0, 0));
    }
  }

  @include breakpoint('<=small') {
    @include padding(3em, 2em, (0, 0, -1em, 0));

    p {
      font-size: 1em;
      letter-spacing: 0;
    }

    &.alt {
      //@include padding(3em, 2em, (1em, 0, 0, 0));
      @include padding(3em, 0, (1em, 0, 0, 0));
      font-size: inherit;

      h1 {
        font-size: 2.5em;
      }
    }
  }

  @include breakpoint('<=xsmall') {
    @include padding(3em, 1.5em, (0, 0, -1em, 0));

    &.alt {
      //@include padding(3em, 1.5em, (1em, 0, 0, 0));
      @include padding(3em, 0, (1em, 0, 0, 0));
    }
  }

  @include breakpoint('<=xxsmall') {
    @include padding(2.5em, 1em, (0, 0, -1em, 0));

    &.alt {
      //@include padding(2.5em, 1em, (1em, 0, 0, 0));
      @include padding(2.5em, 0, (1em, 0, 0, 0));
    }
  }
}

